# flight-control-do178-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CI.md  SCMP.md  SDP.md  SVP.md
src/: CMakeLists.txt  actuator_stub.c  pid_controller.c  pid_controller.h  sensor_stub.c
tests/: CMakeLists.txt  test_pid.c
